# disciplina

./: .dir-locals.el  .dockerignore  .gitattributes  .gitignore  .gitinore  .gitlab-ci.yml  .stylish-haskell.yaml  Dockerfile  Dockerfile.ci  README.md  closure.nix  config-full-sample.yaml  config.yaml  configuration.yaml  default.nix  disciplina-world-state.cabal  disciplina.cabal  log-config.yaml  nixpkgs.nix  package.json  package.yaml  pkgs.nix  release.nix  secret.key  shell-native.nix  shell.nix  snapshot.yaml  stack.yaml
.buildkite/: pipeline.yml
accounts/: disciplina-accounts.cabal
accounts/Disciplina/: Accounts.hs
accounts/Disciplina/Accounts/: Account.hs  Mempool.hs
core/: README.md  disciplina-core.cabal  package.yaml
core/Disciplina/: Core.hs
core/Disciplina/Core/: IndexedWithProof.hs  Types.hs
core/src/Dscp/: Rio.hs  Util.hs
core/src/Dscp/Config/: AppDir.hs  Base.hs  Util.hs
core/src/Dscp/Core/: ATG.hs  Address.hs  Aeson.hs  Arbitrary.hs  Config.hs  FairCV.hs  Fees.hs  Genesis.hs  Governance.hs  PubChain.hs  Serialise.hs  Slotting.hs  Test.hs  Types.hs  Web.hs
core/src/Dscp/Core/Foundation/: ATG.hs  Address.hs  Coin.hs  Educator.hs  Genesis.hs  Grade.hs  Instances.hs  Witness.hs
core/src/Dscp/Core/Foundation/Educator/: ATG.hs  ATGDelta.hs  Assignment.hs  Block.hs  Certificate.hs  Course.hs  DocumentType.hs  Educator.hs  Grade.hs  GradeInfo.hs  ItemDesc.hs  Orphans.hs  PrivateBlock.hs  PrivateTx.hs  Student.hs  Subject.hs  Submission.hs  Timestamp.hs
core/src/Dscp/Core/Foundation/Educator/Block/: Instances.hs  Type.hs
core/src/Dscp/Core/Foundation/Educator/Certificate/: EducationForm.hs  Full.hs  Grade.hs  Info.hs  Language.hs  Meta.hs
core/src/Dscp/Core/Foundation/Educator/Txs/: Instances.hs  Type.hs
core/src/Dscp/Core/Foundation/Transactions/: Instances.hs  Types.hs
core/src/Dscp/Core/Validation/: Educator.hs  Witness.hs
core/src/Dscp/Crypto/: Aeson.hs  Arbitrary.hs  ByteArray.hs  Encrypt.hs  Impl.hs  JWS.hs  MerkleTree.hs  Random.hs  Serialise.hs  Util.hs  Web.hs
core/src/Dscp/Crypto/Hash/: Class.hs  Cryptonite.hs  Hashable.hs
core/src/Dscp/Crypto/Signing/: Class.hs  Cryptonite.hs
core/src/Dscp/Resource/: AppDir.hs  Class.hs  Functions.hs  Logging.hs
core/src/Dscp/System/: FileMode.hs  Files.hs  Other.hs
core/src/Dscp/Util/: Aeson.hs  Constructors.hs  Exceptions.hs  FileEmbed.hs  Format.hs  HasLens.hs  Migration.hs  Rethrow.hs  Serialise.hs  Servant.hs  Test.hs  Time.hs  TimeLimit.hs  Timing.hs  Type.hs
core/src/Dscp/Util/Concurrent/: NotifyWait.hs
core/src/Dscp/Util/Servant/: Auth.hs  Hoist.hs
core/tests/Test/Dscp/Core/: ATG.hs  Serialise.hs
core/tests/Test/Dscp/Core/Validation/: Educator.hs
core/tests/Test/Dscp/Crypto/: Encrypt.hs  JWS.hs  MerkleTree.hs  Serialise.hs
core/tests/Test/Dscp/Util/: Serialise.hs
database/: fixtures.sql  schema.sql
disciplina-tools/: Simulacrum.hs
docs/: api-types.md  authentication.md  build-with-ghci.md  code-style.md  config-full-sample.yaml  config.mb  configuration.md  make-test-publication.md  make-test-tx.md  pull_request_template.md
educator/: Main.hs  README.md  fairCV-example.json  package.yaml
educator/database/: schema.sql  settings.sql
educator/exec/: Main.hs
educator/src/Dscp/: CommonCLI.hs
faucet/: README.md  package.yaml
faucet/exec/: Main.hs
faucet/frontend/: .postcssrc.js  README.md  default.nix  index.html  package.json
faucet/frontend/src/: App.vue  main.js
hpack/: definitions.yaml  package.yaml
lib/: README.md  package.yaml
lib/database/: schema.sql
lib/educator/: Main.hs
lib/src/Dscp/: AVL.hs  Slotting.hs  Util.hs
lib/tests/Test/: Common.hs
lib/witness/: Main.hs
multi-educator/: README.md  package.yaml
multi-educator/exec/: Main.hs
multi-educator/src/Dscp/: MultiEducator.hs
pdfs/: README.md  package.yaml
pdfs/app/: Main.hs
pdfs/inject/: Main.hs
pdfs/src/Pdf/: MkLatex.hs  (+2 more)
pdfs/template/: faircv.cls  main.tex
pdfs/test-pdf/: Main.hs
pdfs/tests/: Main.hs
private/: disciplina-private.cabal
private/src/Disciplina/Private/: DB.hs
public/: disciplina-public.cabal
run/: config.yaml  educator.key  faucet.key  log-config.yaml  syslog-config.yaml  witness.key
scripts/: lint-haskell.sh  lint-trailing-whitespace.sh
scripts/launch/: demo.sh  faucet.sh  node.hs  node.sh
scripts/lint/: trailing.sh
scripts/test/: client-api-ghci.sh  educator.sh  student-submissions-spam.sh
secrets/clusterCi/: faucet.key
specs/: .gitignore  .gitmodules  README.md  default.nix
specs/src/: build.sh  default.nix
src/: Main.hs
src/Disciplina/: Accounts.hs  Core.hs  Crypto.hs  DB.hs  Educator.hs  Launcher.hs  Listeners.hs  Messages.hs  Node.hs  Transaction.hs  Transport.hs  Util.hs  Witness.hs  WorldState.hs
src/Dscp/: Accounts.hs  CLI.hs  Core.hs  Crypto.hs  DB.hs  Educator.hs  Launcher.hs  Listeners.hs  Messages.hs  Network.hs  Resource.hs  System.hs  Transaction.hs  Transport.hs  Util.hs  Witness.hs  Workers.hs
src/educator/: EducatorParams.hs  Main.hs  Params.hs
src/witness/: Listeners.hs  Main.hs  Messages.hs  Params.hs  WitnessParams.hs  Workers.hs
tests/: Common.hs  Main.hs  WorldState.hs
tests/Test/: Common.hs
tools/: README.md  disciplina-tools.cabal  package.yaml  singleton-txperf.json  txperf-demo.json
tools/src/faircv/: Client.hs  FaircvClient.hs  FaircvOptions.hs  Main.hs  Options.hs
tools/src/keygen/: KeygenCommands.hs  KeygenOptions.hs  KeygenSecret.hs  Main.hs
tools/src/simulacrum/: Main.hs
tools/src/swagger/: Main.hs  SwaggerOptions.hs
tools/src/txperf/: Main.hs
tools/src/txperf/Dscp/TxPerf/: Account.hs  Params.hs  Tx.hs
wallet/: README.md  icon.icns  manifest.json  package.yaml  profile.sb
wallet/app/: Glue.hs  Main.hs
wallet/app-vty/: Glue.hs  Main.hs
wallet/exec/: Glue.hs  Main.hs
wallet/exec-cli/: Glue.hs  Main.hs
wallet/exec-qt/: Glue.hs  Main.hs
witness/: Main.hs  README.md  package.yaml
witness/exec/: Main.hs
witness/frontend/: README.md  default.nix  index.html  package.json
witness/tests/: Main.hs
world-state/: ChangeLog.md  disciplina-world-state.cabal
(+776 files in other folders)
