name:                disciplina-accounts
version:             0.0.1
synopsis:            Disciplina - Account-based transaction model
description:         An account-based transaction model for Disciplina with
                     support of smart contracts.
maintainer:          hi@serokell.io
copyright:           2018 TeachMePlease.com
cabal-version:       >=1.10

library
  exposed-modules:     Disciplina.Accounts

  other-modules:       Disciplina.Accounts.Mempool
                     , Disciplina.Accounts.Account

  build-depends:       base >= 4.9
                     , authenticated-data-structures
--                     , cardano-sl-binary
--                     , cardano-sl-core
                     , binary
                     , containers
                     , formatting
                     , lens
                     , lens-action
                     , log-warper
                     , universum

  default-language:    Haskell2010

  default-extensions:  DeriveDataTypeable
                       DeriveGeneric
                       GeneralizedNewtypeDeriving
                       StandaloneDeriving
                       FlexibleContexts
                       FlexibleInstances
                       MultiParamTypeClasses
                       FunctionalDependencies
                       DefaultSignatures
                       NoImplicitPrelude
                       OverloadedStrings
                       RecordWildCards
                       TypeApplications
                       TupleSections
                       ViewPatterns
                       LambdaCase
                       MultiWayIf
                       ConstraintKinds
                       UndecidableInstances
                       BangPatterns
                       TemplateHaskell
                       ScopedTypeVariables
                       MonadFailDesugaring

  ghc-options:         -Wall
                       -fno-warn-orphans
                       -O2

  build-tools: cpphs >= 1.19
  ghc-options: -pgmP cpphs -optP --cpp
