name:                disciplina-core
version:             0.0.1
synopsis:            Disciplina - Core types and functions
description:         Core types and functions for Disciplina platform
maintainer:          hi@serokell.io
copyright:           2018 TeachMePlease.com
cabal-version:       >=1.10

library
  exposed-modules:     Disciplina.Core

  other-modules:       Disciplina.Core.Types,
                       Disciplina.Core.ProvenIx

  build-depends:       cardano-sl-binary
                     , cardano-sl-core
                     , formatting
                     , log-warper
                     , lens
                     , lens-action
                     , mtl
                     , universum

  default-language:    Haskell2010

  default-extensions:
                       BangPatterns
                       ConstraintKinds
                       DefaultSignatures
                       DeriveDataTypeable
                       DeriveGeneric
                       FlexibleContexts
                       FlexibleInstances
                       FunctionalDependencies
                       GeneralizedNewtypeDeriving
                       LambdaCase
                       MonadFailDesugaring
                       MultiParamTypeClasses
                       MultiWayIf
                       NoImplicitPrelude
                       OverloadedStrings
                       RankNTypes
                       RecordWildCards
                       ScopedTypeVariables
                       StandaloneDeriving
                       TemplateHaskell
                       TupleSections
                       TypeApplications
                       TypeFamilies
                       UndecidableInstances
                       ViewPatterns

  ghc-options:         -Wall
                       -fno-warn-orphans
                       -O2

  build-tools: cpphs >= 1.19
  ghc-options: -pgmP cpphs -optP --cpp
