name:                disciplina-tools
version:             0.0.1
synopsis:            Disciplina - Tools for research and development
description:         This package contains tools for development of Disciplina
                     platform, such as simulators of cryptographic protocols.
author:              Serokell
maintainer:          hi@serokell.io
copyright:           2018 TeachMePlease.com
cabal-version:       >=1.10

executable disciplina-simulacrum
  hs-source-dirs:      src/simulacrum
  main-is:             Main.hs
  build-depends:       universum
                     , cardano-sl-binary
                     , base >= 4.9
                     , mtl

  default-language:    Haskell2010
  ghc-options:         -threaded -rtsopts
                       -Wall
                       -fno-warn-orphans
                       -O2

  default-extensions:   DeriveDataTypeable
                        DeriveGeneric
                        GeneralizedNewtypeDeriving
                        StandaloneDeriving
                        FlexibleContexts
                        FlexibleInstances
                        MultiParamTypeClasses
                        FunctionalDependencies
                        DefaultSignatures
                        NoImplicitPrelude
                        OverloadedStrings
                        RecordWildCards
                        TypeApplications
                        TupleSections
                        ViewPatterns
                        LambdaCase
                        MultiWayIf
                        ConstraintKinds
                        UndecidableInstances
                        BangPatterns
                        ApplicativeDo
                        ScopedTypeVariables
                        MonadFailDesugaring
